--- a/index.html
+++ b/index.html
@@ -15,36 +15,41 @@
     </head>
 
     <body>
-        <div class="inner">
-            <div class="container">
-                <div class="header">
-                    <div class="header-row">
-                        <a href="#">
-                        <img class="img-header" src="/images/f-logo.png" alt="Netmatters Logo">
-                        </a>
-                        <div class="phone-and-button">
-                            <a class="phone-icon" href="#">
-                                <i class="fa-solid fa-phone-volume"></i>
+        <header>
+            <div class="inner">
+                <div class="container">
+                    <div class="header">
+                        <div class="header-row">
+                            <a href="#">
+                            <img class="img-header" src="images/f-logo.png" alt="Netmatters Logo">
                             </a>
-                            <button class="header-btn" type="button" data-toggle="sidebar">
-                                <svg class="header-svg">
-                                    <use xlink:href="./sprite.svg#icon-menu"></use>
-                                </svg>
-                            </button>
+                            <div class="phone-and-button">
+                                <a class="phone-icon" href="#">
+                                    <i class="fa-solid fa-phone-volume"></i>
+                                </a>
+                                <button class="header-btn" type="button" data-toggle="sidebar">
+                                    <svg class="header-svg">
+                                        <use xlink:href="./sprite.svg#icon-menu"></use>
+                                    </svg>
+                                </button>
+                            </div>
                         </div>
+                        <form class="search-bar-container">                       
+                            <input class="search-bar" placeholder="Search..." type="text">                       
+                            <button class="search-icon">
+                                <i class="fa-solid fa-magnifying-glass"></i>
+                            </button>
+                        </form>
                     </div>
-                    <form class="search-bar-container">                       
-                        <input class="search-bar" placeholder="Search..." type="text">                       
-                        <button class="search-icon">
-                            <i class="fa-solid fa-magnifying-glass"></i>
-                        </button>
-                    </form>
                 </div>
             </div>
+        </header>
+        <div class="main-nav">
+            <div class="container"></div>
         </div>
         <div class="banner">
             <div class="banner-container">
-                <img class="img-logo-top" src="/images/home-MSxH.png" alt="Image of a padlock sitting inside a circle, connected by straight lines that change direction in sharp 90 degree angles, connecting to other images sitting within circles.">
+                <img class="img-logo-top" src="images/home-MSxH.png" alt="Image of a padlock sitting inside a circle, connected by straight lines that change direction in sharp 90 degree angles, connecting to other images sitting within circles.">
                 <div class="container">
                     <div class="banner-text">
                         <h1>Cyber Security</h1>
@@ -174,14 +179,28 @@
                 </div>
             </div>
         </div>        
-        <div class="section">
-            <div class="row">               
-                <img class="img-logo-top" src="/images/norfolk_prohelp.png" alt="Norfolk Prohelp Logo">                
-                <img class="img-logo-top" src="/images/investing-in-future-growth.png" alt="Investing in Future Growth Logo">               
-                <img class="img-logo-top" src="/images/norfolk-carbon-charter.png" alt="Norfolk Carbon Charter Logo">               
-                <img class="img-logo-top" src="/images/PPC_logo.png" alt="PPC Logo">               
-                <img class="img-logo-top" src="/images/princess-royal-training.png" alt="Princess Royal Training Logo">               
-            </div>
+        <div class="slider-section">
+                <div class="slider-logo">
+                    <img class="img-logo-slider slider-2" src="images/norfolk_prohelp.png" alt="Norfolk Prohelp Logo">
+                </div>
+                <div class="slider-logo">
+                    <img class="img-logo-slider slider-2" src="images/investing-in-future-growth.png" alt="Investing in Future Growth Logo"> 
+                </div>
+                <div class="slider-logo">
+                    <img class="img-logo-slider slider-2" src="images/norfolk-carbon-charter.png" alt="Norfolk Carbon Charter Logo">
+                </div>
+                <div class="slider-logo">
+                    <img class="img-logo-slider slider-2" src="images/PPC_logo.png" alt="PPC Logo">
+                </div>
+                <div class="slider-logo">
+                    <img class="img-logo-slider slider-2" src="images/princess-royal-training.png" alt="Princess Royal Training Logo">
+                </div> 
+                <div class="slider-logo">
+                    <img class="img-logo-slider slider-2" src="images/future-50.png" alt="Future 50 Logo">
+                </div>
+                <div class="slider-logo">
+                    <img class="img-logo-slider slider-2" src="images/qms.png" alt="Qms Logo">
+                </div>               
         </div>
         <div class="middle">
             <div class="container">
@@ -276,7 +295,7 @@
                                 <div class="img-container">
                                     <div class="btn-ln btn-ln-it" href="#">Careers</div>
                                     <div class="img-ln">
-                                        <img class="ln-img" src="/images/2nd-line-technician-zYSs.png" alt="A colourful image with Netmatters saying they are hiring a 2nd line technician">
+                                        <img class="ln-img" src="images/2nd-line-technician-zYSs.png" alt="A colourful image with Netmatters saying they are hiring a 2nd line technician">
                                     </div>
                                 </div>                               
                                 <div class="txt-area-ln">                                    
@@ -290,7 +309,7 @@
                                     <div class="btn-ln-it read-more">Read More</div>
                                     <div class="user">
                                         <div class="avatar">
-                                            <img class="ln-avatar" src="/images/bethany-shakespeare-F6Iu.jpeg" alt="A colourful image saying Netmatters is passionate about celebrating the people who make their success">
+                                            <img class="ln-avatar" src="images/bethany-shakespeare-F6Iu.jpeg" alt="A colourful image saying Netmatters is passionate about celebrating the people who make their success">
                                         </div>
                                         <div class="details">
                                             <strong class="text-primary">Posted by Bethany Shakespeare</strong>
@@ -308,7 +327,7 @@
                                 <div class="img-container">
                                     <div class="btn-ln btn-ln-software-1">News</div>
                                     <div class="img-ln">
-                                        <img class="ln-img" src="/images/april-notables-2025-A2Np.png" alt="A picture of the Netmatters King's Award, showing Netmatters is all about promoting oppertunity">
+                                        <img class="ln-img" src="images/april-notables-2025-A2Np.png" alt="A picture of the Netmatters King's Award, showing Netmatters is all about promoting oppertunity">
                                     </div>
                                 </div>                                   
                                 <div class="txt-area-ln">
@@ -321,7 +340,7 @@
                                     <div class="btn-ln-software-2 read-more">Read More</div>
                                     <div class="user">
                                         <div class="avatar">
-                                            <img class="ln-avatar" src="/images/netmatters-ltd-VXAv.png" alt="A picture of Netmatters saying they are hiring a 2nd line technician">
+                                            <img class="ln-avatar" src="images/netmatters-ltd-VXAv.png" alt="A picture of Netmatters saying they are hiring a 2nd line technician">
                                         </div>
                                         <div class="details">
                                             <strong class="text-primary">Posted by Netmatters</strong>
@@ -339,7 +358,7 @@
                                 <div class="img-container">
                                     <div class="btn-ln btn-ln-training">News</div>
                                     <div class="img-ln">
-                                        <img class="ln-img" src="/images/netmatters-achieves-kings-lGCo.png" alt="A picture of Netmatters saying they are hiring a 2nd line technician">
+                                        <img class="ln-img" src="images/netmatters-achieves-kings-lGCo.png" alt="A picture of Netmatters saying they are hiring a 2nd line technician">
                                     </div>
                                 </div>                               
                                 <div class="txt-area-ln">
@@ -352,7 +371,7 @@
                                     <div class="btn-ln-training read-more">Read More</div>
                                     <div class="user">
                                         <div class="avatar">
-                                            <img class="ln-avatar" src="/images/netmatters-ltd-VXAv.png" alt="A picture of Netmatters saying they are hiring a 2nd line technician">
+                                            <img class="ln-avatar" src="images/netmatters-ltd-VXAv.png" alt="A picture of Netmatters saying they are hiring a 2nd line technician">
                                         </div>
                                         <div class="details">
                                             <strong class="text-primary">Posted by Netmatters</strong>
@@ -372,13 +391,30 @@
                 </h3>
             </div>
         </div>
-        <div class="section">
-            <div class="row">                
-                <img class="img-logo-bottom" src="/images/beat_logo.png" alt="Beat Logo">                
-                <img class="img-logo-bottom" src="/images/survey_solutions_logo.png" alt="Survey Solutions Logo">               
-                <img class="img-logo-bottom" src="/images/sweetzy_logo.png" alt="Sweetzy Logo">               
-                <img class="img-logo-bottom" src="/images/busseys_logo.png" alt="Busseys Logo">                              
-                <img class="img-logo-bottom" src="/images/crane_logo.png" alt="Crane Logo">               
+        <div class="slider-section">
+            <div class="slider-logo">              
+                <img class="img-logo-slider slider-1" src="images/beat_logo.png" alt="Beat Logo">
+            </div>
+            <div class="slider-logo">
+                <img class="img-logo-slider slider-1" src="images/survey_solutions_logo.png" alt="Survey Solutions Logo">
+            </div>
+            <div class="slider-logo">
+                <img class="img-logo-slider slider-1" src="images/girl_guides_anglia.png" alt="Girl Guides Logo"> 
+            </div>
+            <div class="slider-logo">
+                <img class="img-logo-slider slider-1" src="images/sweetzy_logo.png" alt="Sweetzy Logo">
+            </div>
+            <div class="slider-logo">
+                <img class="img-logo-slider slider-1" src="images/howespercivallogo.png" alt="Howes Percivial Logo">
+            </div>
+            <div class="slider-logo">
+                <img class="img-logo-slider slider-1" src="images/girls_day_school_trust_logob.png" alt="Girls Day School Trust Logo">
+            </div>
+            <div class="slider-logo">
+                <img class="img-logo-slider slider-1" src="images/ashcroftlogo_landscape_goldblack_DP60P-small.png" alt="Ashcroft Landscape Goldback Logo">
+            </div>
+            <div class="slider-logo">
+                <img class="img-logo-slider slider-1" src="images/onetravellerlogo_white_figuire.png" alt="One Traveller Logo">
             </div>
         </div>              
         <footer>
@@ -386,7 +422,7 @@
                 <div class="container">
                     <div class="footer-logo-box">
                         <div class="footer-logo">                            
-                            <img class="img-footer" src="/images/nm-logo-white-med.png" alt="Netmatters Logo">                            
+                            <img class="img-footer" src="images/nm-logo-white-med.png" alt="Netmatters Logo">                            
                         </div>
                         <h4>Follow us on:</h4>
 
