Updated Netmatters Website

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
         <meta name="ROBOTS" content="NOINDEX,NOFOLLOW">
+        
+        <link rel="preconnect" href="https://fonts.googleapis.com"> <!-- These speed up the loading time for fonts by setting up the server connection in advance. -->
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <!-- These speed up the loading time for fonts by setting up the server connection in advance. -->
+        <link href="https://fonts.googleapis.com/css2?family=Nunito:ital@0;1&family=Poppins&display=swap" rel="stylesheet"> <!-- Link to my fonts. -->
 
         <link rel="stylesheet" href="css/style.css">
         <script src="https://kit.fontawesome.com/b711cced4c.js" crossorigin="anonymous"></script>
