Updated Netmatters Webpage

--- a/index.html
+++ b/index.html
@@ -418,13 +418,13 @@
             </div>
         </div>              
         <footer>
-            <div class="Footer-flex-container">               
-                <div class="container">
+            <div class="container">               
+                <div class="footer-flex-container">
                     <div class="footer-logo-box">
                         <div class="footer-logo">                            
                             <img class="img-footer" src="images/nm-logo-white-med.png" alt="Netmatters Logo">                            
                         </div>
-                        <h4>Follow us on:</h4>
+                        <h4 class="follow-us">Follow us on:</h4>
 
                         <div class="footer-social-logos">
                             <div class="row">
@@ -454,61 +454,65 @@
                         </div>
                     </div>
                     <div class="footer-menu-box">
-                        <div class="footer-menu">
-                            <h4>About Netmatters</h4>
-                            <ul>
-                                <li><a href="#">News</a></li>
-                                <li><a href="#">Our Careers</a></li>
-                                <li><a href="#">Our Team</a></li>
-                                <li><a href="#">Contact Us</a></li>
-                                <li><a href="#">Privacy Policy</a></li>
-                                <li><a href="#">Cookie Policy</a></li>
-                                <li><a href="#">Data Retention</a></li>
-                                <li><a href="#">CCTV Policy</a></li>
-                                <li><a href="#">Environmental Policy</a></li>
-                                <li><a href="#">Terms &amp; Conditions</a></li>
-                            </ul>
+                        <div class="footer-bp">
+                            <div class="footer-menu">
+                                <h4>About Netmatters</h4>
+                                <ul>
+                                    <li><a href="#">News</a></li>
+                                    <li><a href="#">Our Careers</a></li>
+                                    <li><a href="#">Our Team</a></li>
+                                    <li><a href="#">Contact Us</a></li>
+                                    <li><a href="#">Privacy Policy</a></li>
+                                    <li><a href="#">Cookie Policy</a></li>
+                                    <li><a href="#">Data Retention</a></li>
+                                    <li><a href="#">CCTV Policy</a></li>
+                                    <li><a href="#">Environmental Policy</a></li>
+                                    <li><a href="#">Terms &amp; Conditions</a></li>
+                                </ul>
+                            </div>
+                            <div class="footer-menu">                            
+                                <h4>Our Services</h4>
+                                <ul>
+                                    <li><a href="#">Bespoke Software</a></li>
+                                    <li><a href="#">IT Support</a></li>
+                                    <li><a href="#">Digital Marketing</a></li>
+                                    <li><a href="#">Telecoms Services</a></li>
+                                    <li><a href="#">Web Design</a></li>
+                                    <li><a href="#">Cyber Security</a></li>
+                                    <li><a href="#">Developer Training</a></li>
+                                </ul>
+                            </div>
                         </div>
-                        <div class="footer-menu">                            
-                            <h4>Our Services</h4>
-                            <ul>
-                                <li><a href="#">Bespoke Software</a></li>
-                                <li><a href="#">IT Support</a></li>
-                                <li><a href="#">Digital Marketing</a></li>
-                                <li><a href="#">Telecoms Services</a></li>
-                                <li><a href="#">Web Design</a></li>
-                                <li><a href="#">Cyber Security</a></li>
-                                <li><a href="#">Developer Training</a></li>
-                            </ul>
-                        </div>
-                        <div class="footer-menu">
-                            <h4>Our Industries</h4>
-                            <ul>
-                                <li><a href="#">Financial Services</a></li>
-                                <li><a href="#">Construction</a></li>
-                                <li><a href="#">Retail &amp; E-Commerce</a></li>
-                                <li><a href="#">Non-Profits</a></li>
-                                <li><a href="#">SME's</a></li>
-                                <li><a href="#">Healthcare</a></li>
-                                <li><a href="#">Education &amp; Training</a></li>
-                                <li><a href="#">Travel &amp; Leisure</a></li>
-                                <li><a href="#">Manufacturing &amp; Offshore</a></li>
-                            </ul>
-                        </div>
-                        <div class="footer-menu">
-                            <h4>Locations</h4>
-                            <ul>
-                                <li><a href="#">Cambridge Office</a></li>
-                                <li><a href="#">Wymondham Office</a></li>
-                                <li><a href="#">Great Yarmouth Office</a></li>
-                            </ul>
+                        <div class="footer-bp">
+                            <div class="footer-menu">
+                                <h4>Our Industries</h4>
+                                <ul>
+                                    <li><a href="#">Financial Services</a></li>
+                                    <li><a href="#">Construction</a></li>
+                                    <li><a href="#">Retail &amp; E-Commerce</a></li>
+                                    <li><a href="#">Non-Profits</a></li>
+                                    <li><a href="#">SME's</a></li>
+                                    <li><a href="#">Healthcare</a></li>
+                                    <li><a href="#">Education &amp; Training</a></li>
+                                    <li><a href="#">Travel &amp; Leisure</a></li>
+                                    <li><a href="#">Manufacturing &amp; Offshore</a></li>
+                                </ul>
+                            </div>
+                            <div class="footer-menu footer-menu-4">
+                                <h4>Locations</h4>
+                                <ul>
+                                    <li><a href="#">Cambridge Office</a></li>
+                                    <li><a href="#">Wymondham Office</a></li>
+                                    <li><a href="#">Great Yarmouth Office</a></li>
+                                </ul>
+                            </div>
                         </div>
                     </div> 
                 </div>
             </div>
         </footer>  
         <div class="footer-bottom-box">
-            <div class="container footer-bottom-container">
+            <div class="container">
                 <div class="footer-bottom-column">
                     <div class="license-1">
                         &copy; Copyright Netmatters 2025.
