Updated Netmatters Website

--- a/index.html
+++ b/index.html
@@ -49,8 +49,83 @@
                 </div>
             </div>
         </header>
-        <div class="main-nav">
-            <div class="container"></div>
+        <div class="nav-bar">
+            <div class="container">
+                <div class="nav-list">
+                    <a class="nav-software" href="#">
+                        <div class="nav-content">     
+                            <span class="nav-software-icon nav-icon">
+                                <i class="fa-solid fa-laptop"></i>
+                            </span>
+                            <small>Consultancy</small>
+                            <div> &amp; </div>
+                            <div>Development</div>
+                        </div>
+                    </a>
+                    <a class="nav-it" href="#">
+                        <div class="nav-content">
+                            <span>
+                                <svg class="nav-it-icon nav-icon">
+                                    <use xlink:href="./sprite.svg#icon-display"></use>
+                                </svg>
+                            </span>
+                            <small>IT</small>
+                            <div>Support</div>
+                        </div>
+                    </a>
+                    <a class="nav-digital" href="#">
+                        <div class="nav-content">
+                            <span>
+                                <svg class="nav-digital-icon nav-icon">
+                                    <use xlink:href="./sprite.svg#icon-signal_cellular_alt"></use>
+                                </svg>
+                            </span>
+                            <small>Digital</small>
+                            <div>Marketing</div>
+                        </div>
+                    </a>
+                    <a class="nav-telecoms" href="#">
+                        <div class="nav-content">
+                            <span class="nav-telecoms-icon nav-icon">
+                                <i class="fa-solid fa-phone-volume"></i>
+                            </span>
+                            <small>Telecoms</small>
+                            <div>Services</div>
+                        </div>
+                    </a>
+                    <a class="nav-web" href="#">
+                        <div class="nav-content">
+                            <span class="nav-web-icon nav-icon">
+                                <i class="fa-solid fa-code"></i>
+                            </span>
+                            <small>Web</small>
+                            <div>Design</div>
+                        </div>
+                    </a>
+                    <a class="nav-security" href="#">
+                        <div class="nav-content">
+                            <span>
+                                <svg class="nav-security-icon nav-icon">
+                                    <use xlink:href="./sprite.svg#icon-security"></use>
+                                </svg>
+                            </span>
+                            <small>Cyber</small>
+                            <div>Security</div>
+                        </div>
+                    </a>
+                    <a class="nav-training" href="#">
+                        <div class="nav-content">
+                            <span>
+                                <svg class="nav-training-icon nav-icon">
+                                    <use xlink:href="./sprite.svg#icon-school"></use>
+                                </svg>
+                            </span>
+                            <small>Developer</small>
+                            <div>Course</div>
+                        </div>
+                    </a>
+                </div>
+            </div>
         </div>
         <div class="banner">
             <div class="banner-container">
