Updated Netmatters Website

--- a/index.html
+++ b/index.html
@@ -52,16 +52,42 @@
         <div class="nav-bar">
             <div class="container">
                 <div class="nav-list">
-                    <a class="nav-software" href="#">
-                        <div class="nav-content">     
-                            <span class="nav-software-icon nav-icon">
-                                <i class="fa-solid fa-laptop"></i>
-                            </span>
-                            <small>Consultancy</small>
-                            <div> &amp; </div>
-                            <div>Development</div>
+                    <div class="nav-software-box">
+                        <a class="nav-software" href="#">
+                            <div class="nav-content">     
+                                <span class="nav-software-icon nav-icon">
+                                    <i class="fa-solid fa-laptop"></i>
+                                </span>
+                                <small>Consultancy</small>
+                                <div> &amp; </div>
+                                <div>Development</div>
+                            </div>
+                        </a>
+                        <div class="nav-dropdown">
+                            <div class="nav-dd-t-1">Our Consultancy &amp; Development Services</div>
+                            <div class="nav-dd-row">
+                                <div class="nav-dd-box">
+                                    <a href="#">Bespoke CRM</a>
+                                    <a href="#">Mobile APP Development</a>
+                                    <a href="#">Operational Systems</a>
+                                    <a href="#">Intranet Development</a>
+                                    <a href="#">SAP S/4HANA Management</a>
+                                </div>
+                                <div class="nav-dd-box">
+                                    <a href="#">Business Automation</a>
+                                    <a href="#">Bespoke Databases</a>
+                                    <a href="#">Business Central Implementation</a>
+                                    <a href="#">Customer Portal Development</a>
+                                </div>
+                                <div class="nav-dd-box">
+                                    <a href="#">Software Integrations</a>
+                                    <a href="#">Sharepoint Development</a>
+                                    <a href="#">Internet of Things (IOT) Software</a>
+                                    <a href="#">Reporting Hub</a>
+                                </div>
+                            </div>
                         </div>
-                    </a>
+                    </div>
                     <a class="nav-it" href="#">
                         <div class="nav-content">
                             <span>
@@ -123,7 +149,7 @@
                             <small>Developer</small>
                             <div>Course</div>
                         </div>
-                    </a>
+                    </a>        
                 </div>
             </div>
         </div>
