--- a/index.html
+++ b/index.html
@@ -28,10 +28,25 @@
                             <a href="#">
                             <img class="img-header" src="images/f-logo.png" alt="Netmatters Logo">
                             </a>
-                            <div class="phone-and-button">
+                            <div class="sb-content">
                                 <a class="phone-icon" href="#">
                                     <i class="fa-solid fa-phone-volume"></i>
                                 </a>
+                                <button class="mouse-icon">
+                                    <i class="fa-solid fa-computer-mouse"></i><span>Support</span>
+                                </button>
+                                <button class="plane-icon">
+                                    <i class="fa-regular fa-paper-plane"></i><span>Contact</span>
+                                </button>
+                                <button class="search-icon-3">
+                                    <i class="fa-solid fa-magnifying-glass"></i>
+                                </button>
+                                <form class="search-bar-container-2">                       
+                                    <input class="search-bar-2" placeholder="Search..." type="text">                       
+                                    <button class="search-icon-2">
+                                        <i class="fa-solid fa-magnifying-glass"></i>
+                                    </button>
+                                </form>
                                 <button class="header-btn" type="button" data-toggle="sidebar">
                                     <svg class="header-svg">
                                         <use xlink:href="./sprite.svg#icon-menu"></use>
@@ -39,9 +54,9 @@
                                 </button>
                             </div>
                         </div>
-                        <form class="search-bar-container">                       
-                            <input class="search-bar" placeholder="Search..." type="text">                       
-                            <button class="search-icon">
+                        <form class="search-bar-container-1">                       
+                            <input class="search-bar-1" placeholder="Search..." type="text">                       
+                            <button class="search-icon-1">
                                 <i class="fa-solid fa-magnifying-glass"></i>
                             </button>
                         </form>
