Updated Netmatters Webpage

--- a/index.html
+++ b/index.html
@@ -48,9 +48,11 @@
                                     </button>
                                 </form>
                                 <button class="header-btn" type="button" data-toggle="sidebar">
-                                    <svg class="header-svg">
-                                        <use xlink:href="./sprite.svg#icon-menu"></use>
-                                    </svg>
+                                    <span class="burger-box">
+                                        <span class="burger-line"></span>
+                                        <span class="burger-line"></span>
+                                        <span class="burger-line"></span>
+                                    </span>
                                 </button>
                             </div>
                         </div>
