--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <!-- These speed up the loading time for fonts by setting up the server connection in advance. -->
         <link href="https://fonts.googleapis.com/css2?family=Nunito:ital@0;1&family=Poppins&display=swap" rel="stylesheet"> <!-- Link to my fonts. -->
 
+        <link rel="icon" href="images/favicon.ico" type="image/x-icon">
         <link rel="stylesheet" href="css/style.css">
-        
         <script src="https://kit.fontawesome.com/b711cced4c.js" crossorigin="anonymous"></script>
         
         <title>
@@ -670,32 +670,93 @@
             </div>
         </div>
         <div class="slider-section">
-            <div class="slider-logo">              
-                <img class="img-logo-slider slider-1" src="images/beat_logo.png" alt="Beat Logo">
+            <div class="beat">
+                <div class="slider-logo">              
+                    <img class="img-logo-slider slider-1" src="images/beat_logo.png" alt="Beat Logo">
+                </div>
+                <div class="beat-popup popup">
+                    <h4>BEAT</h4>
+                    <p>The UK's eating disorder charity founded in 1989.</p>
+                </div>
+                <div class="logo-triangle beat-triangle"></div>
             </div>
-            <div class="slider-logo">
-                <img class="img-logo-slider slider-1" src="images/survey_solutions_logo.png" alt="Survey Solutions Logo">
+            <div class="survey">
+                <div class="slider-logo">
+                    <img class="img-logo-slider slider-1" src="images/survey_solutions_logo.png" alt="Survey Solutions Logo">
+                </div>
+                <div class="survey-popup popup">
+                    <h4>Survey Solutions</h4>
+                </div>
+                <div class="logo-triangle survey-triangle"></div>
             </div>
-            <div class="slider-logo">
-                <img class="img-logo-slider slider-1" src="images/girl_guides_anglia.png" alt="Girl Guides Logo"> 
+            <div class="guides">
+                <div class="slider-logo">
+                    <img class="img-logo-slider slider-1" src="images/girl_guides_anglia.png" alt="Girl Guides Logo"> 
+                </div>
+                <div class="guides-popup popup">
+                    <h4>Girl Guiding Anglia</h4>
+                    <p>Girl Guiding Anglia is part of Girlguiding, the UK's leading charity for girls and young woman in the UK.</p>
+                </div>
+                <div class="logo-triangle guides-triangle"></div>
             </div>
-            <div class="slider-logo">
-                <img class="img-logo-slider slider-1" src="images/sweetzy_logo.png" alt="Sweetzy Logo">
+            <div class="sweetzy">
+                <div class="slider-logo">
+                    <img class="img-logo-slider slider-1" src="images/sweetzy_logo.png" alt="Sweetzy Logo">
+                </div>
+                <div class="sweetzy-popup popup">
+                    <h4>Sweetzy</h4>
+                    <p>Sweetzy are an online sweets retailer, based in Wymondham.</p>
+                </div>
+                <div class="logo-triangle sweetzy-triangle"></div>
             </div>
-            <div class="slider-logo">
-                <img class="img-logo-slider slider-1" src="images/howespercivallogo.png" alt="Howes Percivial Logo">
+            <div class="howes">
+                <div class="slider-logo">
+                    <img class="img-logo-slider slider-1" src="images/howespercivallogo.png" alt="Howes Percivial Logo">
+                </div>
+                <div class="howes-popup popup">
+                    <h4>Howes Percival</h4>
+                </div>
+                <div class="logo-triangle howes-triangle"></div>
             </div>
-            <div class="slider-logo">
-                <img class="img-logo-slider slider-1" src="images/girls_day_school_trust_logob.png" alt="Girls Day School Trust Logo">
+            <div class="girls">
+                <div class="slider-logo">
+                    <img class="img-logo-slider slider-1" src="images/girls_day_school_trust_logob.png" alt="Girls Day School Trust Logo">
+                </div>
+                <div class="girls-popup popup">
+                    <h4>GDST</h4>
+                    <p>The <strong>Girls' Day School Trust (GDST)</strong> is the UK's leading family of 25 independent girls' schools.</p>
+                </div>
+                <div class="logo-triangle girls-triangle"></div>
             </div>
-            <div class="slider-logo">
-                <img class="img-logo-slider slider-1" src="images/ashcroftlogo_landscape_goldblack_DP60P-small.png" alt="Ashcroft Landscape Goldback Logo">
+            <div class="ashcroft">
+                <div class="slider-logo">
+                    <img class="img-logo-slider slider-1" src="images/ashcroftlogo_landscape_goldblack_DP60P-small.png" alt="Ashcroft Landscape Goldback Logo">
+                </div>
+                <div class="ashcroft-popup popup">
+                    <h4>Ashcroft Partnership LLP</h4>
+                    <p>Originall founded in 2006 as Ashcroft Anthony, they became Ashcroft Partnership LLP in 2020 and are one of the top chartered accountancy firms in Cambridge, advising entrepreneurs and families.</p>
+                </div>
+                <div class="logo-triangle ashcroft-triangle"></div>
             </div>
-            <div class="slider-logo">
-                <img class="img-logo-slider slider-1" src="images/onetravellerlogo_white_figuire.png" alt="One Traveller Logo">
+            <div class="one">
+                <div class="slider-logo">
+                    <img class="img-logo-slider slider-1" src="images/onetravellerlogo_white_figuire.png" alt="One Traveller Logo">
+                </div>
+                <div class="one-popup popup">
+                    <h4>One Traveller</h4>
+                    <p><strong>One Traveller</strong>, founded in 2007, is a leading provider of solo holidays for over 50s.</p>
+                </div>
+                <div class="logo-triangle one-triangle"></div>
             </div>
-            <div class="slider-logo">
-                <img class="img-logo-slider slider-1" src="images/searles_logo.png" alt="One Traveller Logo">
+            <div class="searles">
+                <div class="slider-logo">
+                    <img class="img-logo-slider slider-1" src="images/searles_logo.png" alt="One Traveller Logo">
+                </div>
+                <div class="searles-popup popup">
+                    <h4>Searles Leisure Resort</h4>
+                    <p>Searles Leisure Resort, on the beautiful North Norfolk coast, is an award-winning UK holiday resort for families.</p>
+                </div>
+                <div class="logo-triangle searles-triangle"></div>
             </div>
             <div class="slider-logo">
                 <img class="img-logo-slider slider-1" src="images/busseys_logo.png" alt="One Traveller Logo">
